<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abhinav.restowner.MainActivity">

<!--
    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="164dp"
        android:background="@drawable/rounded_corners" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/textView3"
        android:layout_alignStart="@+id/password"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/owner_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:background="@drawable/rounded_corners" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/proceed"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:fontFamily="serif"
        android:text="@string/proceed" />
-->
   <RelativeLayout
       android:layout_width="300dp"
       android:layout_height="200dp"
       android:layout_centerInParent="true"
       android:id="@+id/relativeLayout"
       android:background="@drawable/rounded_corners">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/black"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/black"
            android:layout_marginTop="2dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:hint="@string/owner_name"
            android:inputType="textPersonName"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

    </LinearLayout>

   </RelativeLayout>

    <Button
        android:id="@+id/proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:fontFamily="serif"
        android:text="@string/proceed" />

</android.widget.RelativeLayout>